# rhinobox

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
api/: bootstrap.php  config.php  control.php  discovery.php  logs.php  process-monitor.php  projects.php  service-version.php  services.php  system-metrics.php  vhosts.php
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/common/: EmptyState.tsx  TooltipAction.tsx
src/components/dashboard/: OverviewCards.tsx
src/components/layout/: AppFooter.tsx  AppHeader.tsx  AppSidebar.tsx
src/components/service/: ServiceCard.tsx
src/lib/: configApi.ts  discoveryApi.ts  externalLinks.ts  logsApi.ts  monitorApi.ts  projectsApi.ts  runtime.ts  servicesApi.ts  systemMetricsApi.ts  vhostsApi.ts
src/pages/: AboutPage.tsx  ConfigEditorPage.tsx  DashboardPage.tsx  DiscoveryPage.tsx  LogsPage.tsx  ProcessMonitorPage.tsx  ProjectsPage.tsx  VirtualHostsPage.tsx
src/store/: uiStore.ts
